Added c++11 requirement for the test. Updated test cases.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,3 +3,4 @@ target_link_libraries(main-c PRIVATE otx-c)
 
 add_executable(main-cpp main.cpp)
 target_link_libraries(main-cpp PRIVATE otx-cpp)
+target_compile_features(main-cpp PUBLIC cxx_std_11)
