--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,3 @@
-add_executable(main-c main.c)
-target_link_libraries(main-c PRIVATE otx-c)
-
-add_executable(main-cpp main.cpp)
-target_link_libraries(main-cpp PRIVATE otx-cpp)
-target_compile_features(main-cpp PUBLIC cxx_std_11)
+add_executable(main main.cpp)
+target_link_libraries(main PRIVATE otx)
+target_compile_features(main PUBLIC cxx_std_11)
